--- a/src/Vista/Vista_MenuPrincipal.form
+++ b/src/Vista/Vista_MenuPrincipal.form
@@ -140,7 +140,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jblMensaje" min="-2" pref="86" max="-2" attributes="0"/>
+                  <Component id="jblMensaje" min="-2" pref="202" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -157,7 +157,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jblMensaje">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Version 1.0"/>
+            <Property name="text" type="java.lang.String" value="Version Catering 1.0"/>
           </Properties>
         </Component>
       </SubComponents>
