--- a/src/Vista/Vista_Inventario.form
+++ b/src/Vista/Vista_Inventario.form
@@ -411,7 +411,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="jBttsalir" min="-2" pref="64" max="-2" attributes="0"/>
+                      <Component id="jBttsalir" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
                   </Group>
               </Group>
